--- a/blog/source/_data/fluid_config.yml
+++ b/blog/source/_data/fluid_config.yml
@@ -149,7 +149,7 @@ txc:
 # Index Page
 #---------------------------
 index:
-  banner_img: /img/banner.jpg  # 首页 Banner 头图，以下相同
+  banner_img: https://sm.ms/image/KaPW3bcYxvIzVnA  # 首页 Banner 头图，以下相同
   banner_img_height: 80  # 头图高度，屏幕百分比，available: 0 - 100
   post_default_img: '' # 默认的文章封面图，当没有指定 index_img 时会使用该图片，若都为空则不显示任何图片
   slogan:  # 首页副标题的独立设置
