--- a/blog/source/_data/fluid_config.yml
+++ b/blog/source/_data/fluid_config.yml
@@ -50,7 +50,7 @@ color:  # 主体颜色配置，可以从这里寻找启发： https://www.webdes
   board_color: "#fff"
 
 custom_js:   # 指定自定义 js 文件路径，路径是相对 source 目录，如 /js/custom.js
-custom_css: /css/custom.css # 指定自定义 css 文件路径，路径是相对 source 目录，如 /css/custom.css
+custom_css:  # 指定自定义 css 文件路径，路径是相对 source 目录，如 /css/custom.css
 custom_html: ''  # 自定义底部 HTML 内容（位于 footer 上方），也可用于外部引入 js css 这些操作，注意不要和 post.custom 配置冲突
 
 web_analytics:  # 网页访问统计
@@ -149,7 +149,7 @@ txc:
 # Index Page
 #---------------------------
 index:
-  banner_img: https://sm.ms/image/KaPW3bcYxvIzVnA  # 首页 Banner 头图，以下相同
+  banner_img: https://i.loli.net/2020/04/06/KaPW3bcYxvIzVnA.jpg  # 首页 Banner 头图，以下相同
   banner_img_height: 80  # 头图高度，屏幕百分比，available: 0 - 100
   post_default_img: '' # 默认的文章封面图，当没有指定 index_img 时会使用该图片，若都为空则不显示任何图片
   slogan:  # 首页副标题的独立设置
