--- a/blog/package.json
+++ b/blog/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "hexo": "^4.0.0",
+    "hexo-all-minifier": "^0.5.3",
     "hexo-cli": "^3.1.0",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
