--- a/blog/source/_data/fluid_config.yml
+++ b/blog/source/_data/fluid_config.yml
@@ -214,6 +214,10 @@ post:
     enable: false
     specific: false  # 开启后，只有在文章 Front-matter 里指定 `math: true` 才会在文章页启动公式转换，以便在页面不包含公式时提高加载速度
     engine: mathjax  # 公式引擎  available: mathjax | katex
+  mermaid:
+    enable: true
+    specific: false
+    options:
 
 #---------------------------
 # 评论
