--- a/blog/source/_data/fluid_config.yml
+++ b/blog/source/_data/fluid_config.yml
@@ -190,7 +190,7 @@ post:
       enable: false
       format: "{} 次"
   updated:
-    enable: false
+    enable: true
     content: 本文最后更新于：
   toc:  # 文章右侧目录
     enable: true
