--- a/blog/source/_data/fluid_config.yml
+++ b/blog/source/_data/fluid_config.yml
@@ -205,7 +205,7 @@ post:
     content: '<img src="https://octodex.github.com/images/jetpacktocat.png" class="rounded mx-auto d-block mt-5" style="width:150px; height:150px;">' # 自定义区域，支持 HTML，可自行插入赞赏码、公众号二维码等内容
   comments:  # 评论
     enable: true  # 开启评论
-    postCheck: true  # 粒度控制
+    postCheck: false  # 粒度控制, 不进行 文章评论检查
     type: utterances  # 指定使用的评论模块  available: disqus | valine | gitalk | utterances | changyan | livere  推荐 utterances
   image_zoom:  # 文章图片可点击放大
     enable: true
