--- a/blog/package.json
+++ b/blog/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "hexo": "^4.0.0",
+    "hexo-abbrlink": "^2.0.5",
+    "hexo-addlink": "^1.0.4",
     "hexo-all-minifier": "^0.5.3",
     "hexo-cli": "^3.1.0",
     "hexo-filter-mermaid-diagrams": "^1.0.5",
@@ -20,9 +22,12 @@
     "hexo-generator-category": "^1.0.0",
     "hexo-generator-index": "^1.0.0",
     "hexo-generator-tag": "^1.0.0",
+    "hexo-helper-live2d": "^3.1.1",
     "hexo-renderer-ejs": "^1.0.0",
     "hexo-renderer-marked": "^2.0.0",
     "hexo-renderer-stylus": "^1.1.0",
-    "hexo-server": "^1.0.0"
+    "hexo-server": "^1.0.0",
+    "live2d-widget-model-ni-j": "^1.0.5",
+    "live2d-widget-model-nietzsche": "^1.0.5"
   }
 }
