--- a/blog/source/_data/fluid_config.yml
+++ b/blog/source/_data/fluid_config.yml
@@ -76,7 +76,7 @@ daovoice:  # 在线客服 Daovoice 参考：http://dashboard.daovoice.io
   appid: ''  # 应用ID设置
 
 aplayer:  # 音乐播放器，注意不能与 hexo-tag-aplayer 插件共用
-  enable: true
+  enable: false
   autoplay: false  # 音频自动播放
   loop: 'all'  # 音频循环播放, 可选值: 'all', 'one', 'none'
   order: 'random'  # 播放顺序，可选值: 'list', 'random'
