--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,8 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
+        with:
+          version: 9 # 修正：明确指定 pnpm 版本
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
