--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,9 @@ jobs:
           cache: "pnpm"
       - name: Install dependencies
         run: pnpm install
-      - name: Build
+      - name: Install Playwright browsers
+        run: pnpm exec playwright install --with-deps
+      - name: Build with Astro
         run: pnpm build
       - name: Setup Pages
         uses: actions/configure-pages@v5
